--- a/gallery/index.html
+++ b/gallery/index.html
@@ -47,46 +47,45 @@
 
             <div class="cardRow">
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/download_1.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/DSCF5274.jpg')">
                     </div>
                     <div class="prodEtail">
                         <p class="proName">products name</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/download_2.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/DSCF5276.jpg')">
                     </div>
                     <div class="prodEtail">
                         <p class="proName">products name</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/download_3.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/DSCF5281.jpg')">
                     </div>
                     <div class="prodEtail">
                         <p class="proName">products name</p>
                     </div>
                 </div>
             </div>
-
 
             <div class="cardRow">
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/download_4.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/DSCF5282.jpg')">
                     </div>
                     <div class="prodEtail">
                         <p class="proName">products name</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/download_5.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/DSCF5285.jpg')">
                     </div>
                     <div class="prodEtail">
                         <p class="proName">products name</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/download_1.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/DSCF5287.jpg')">
                     </div>
                     <div class="prodEtail">
                         <p class="proName">products name</p>
@@ -94,6 +93,118 @@
                 </div>
             </div>
 
+            <div class="cardRow">
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/DSCF5289.jpg')">
+                    </div>
+                    <div class="prodEtail">
+                        <p class="proName">products name</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/DSCF5291.jpg')">
+                    </div>
+                    <div class="prodEtail">
+                        <p class="proName">products name</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/DSCF5292.jpg')">
+                    </div>
+                    <div class="prodEtail">
+                        <p class="proName">products name</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="cardRow">
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/DSCF5293.jpg')">
+                    </div>
+                    <div class="prodEtail">
+                        <p class="proName">products name</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/DSCF5294.jpg')">
+                    </div>
+                    <div class="prodEtail">
+                        <p class="proName">products name</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/DSCF5297.jpg')">
+                    </div>
+                    <div class="prodEtail">
+                        <p class="proName">products name</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="cardRow">
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/DSCF5299.jpg')">
+                    </div>
+                    <div class="prodEtail">
+                        <p class="proName">products name</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/DSCF5300.jpg')">
+                    </div>
+                    <div class="prodEtail">
+                        <p class="proName">products name</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/DSCF5301.jpg')">
+                    </div>
+                    <div class="prodEtail">
+                        <p class="proName">products name</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="cardRow">
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/DSCF5304.jpg')">
+                    </div>
+                    <div class="prodEtail">
+                        <p class="proName">products name</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/DSCF5305.jpg')">
+                    </div>
+                    <div class="prodEtail">
+                        <p class="proName">products name</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/DSCF5306.jpg')">
+                    </div>
+                    <div class="prodEtail">
+                        <p class="proName">products name</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="cardRow">
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/DSCF5307.jpg')">
+                    </div>
+                    <div class="prodEtail">
+                        <p class="proName">products name</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/DSCF5308.jpg')">
+                    </div>
+                    <div class="prodEtail">
+                        <p class="proName">products name</p>
+                    </div>
+                </div>
+            </div>
 
         </div>
         <div class=footer>
