--- a/gallery/index.html
+++ b/gallery/index.html
@@ -44,6 +44,12 @@
         <div id="box">
             <h1 id="pro">GALLERY</h1>
 
+            <div id="cardMain" style="display : none">
+                <div class="prodImgMain">
+                    <div id="close"></div>
+                </div>
+            </div>
+
 
             <div class="cardRow">
                 <div class="card">
@@ -231,5 +237,6 @@
 </body>
 
 <script type="application/javascript" src='../static/js/nav.js'></script>
+<script type="application/javascript" src='./JS/app.js'></script>
 
 </html>
