--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             }, 10000);
         </script>
         <div class="tbox">
-            <h1 class="cursive">About Us</h1>
+            <h1 class>About Us</h1>
             <div class="pair">
                 <img src="./static/images/6.jpg" class="img1">
                 <p class="text1">We at Frescamer believe that each and every one of you deserve the very best when it comes to flavour, freshness and quality.
