--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <link rel="stylesheet" type="text/css" href="static/css/index.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Barlow|Montserrat|PT+Sans+Narrow&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Proza+Libre&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <script type="text/javascript" src="static/js/slide.json"></script>
     <script type="text/javascript" src="static/js/index.js"></script>
     <script type="text/javascript" src="./static/js/nav.js"></script>
@@ -35,7 +35,7 @@
 
     <div class="container">
         <div class="fab">
-            <a href="contact/"><i class="fa fa-phone" aria-hidden="true"></i><p>  Contact Us</p></a>
+            <a href="contact/"><i class="fa fa-phone" aria-hidden="true"></i><p class="hidden"></p></a>
         </div>
         <div class="topnav">
             <div>
@@ -79,7 +79,7 @@
             }, 10000);
         </script>
         <div class="tbox">
-            <h1 class>About Us</h1>
+            <h1 id="cursive">About Us</h1>
             <div class="pair">
                 <img src="./static/images/6.jpg" class="img1">
                 <p class="text1">We at Frescamer believe that each and every one of you deserve the very best when it comes to flavour, freshness and quality.
