--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     Add the link or image directory (with respect to this html file) in the slides.json
     file as per the default examples given.
-    Make sure you add a "\" to the end of the line in json for miltiline string.
+    Make sure you add a "\" to the end of the line in json for multiline string.
 
 
 
@@ -17,12 +17,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="static/assets/global.css">
     <link rel="stylesheet" type="text/css" href="static/css/index.css">
+    <link rel="stylesheet" type="text/css" href="static/css/bootstrap-iso.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Barlow|Montserrat|PT+Sans+Narrow&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Proza+Libre&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> -->
     <script type="text/javascript" src="static/js/slide.json"></script>
     <script type="text/javascript" src="static/js/index.js"></script>
     <script type="text/javascript" src="./static/js/nav.js"></script>
@@ -78,7 +82,28 @@
                 plusDivs(1)
             }, 10000);
         </script>
+
+
+        
         <div class="tbox">
+                <div class="bootstrap-iso pair">
+                        <div class="row ">
+                            <div class="card-deck">
+                                <div class="card col-sm-3" style="background-color:transparent;"><img src="./static/images/1.png" width="150" height="150"/><h1 id="cursive">Stay Clean, Stay Green</h1>
+                                Sustainable and eco-friendly practices are used in order to minimise the impact on the environment.
+                                </div>
+                                <div class="card col-sm-3" style="background-color:transparent;"><img src="./static/images/2.png" width="150" height="150"/><h1 id="cursive">Safe and reliable</h1>
+                            The food we bring to your plates is packaged in 100% tried and tested food grade packaging. The food grade plastics used keep the contents fresh and delicious.
+                                </div>
+                                <div class="card col-sm-3" style="background-color:transparent;"><img src="./static/images/3.png" width="150" height="150"/><h1 id="cursive">Quality Assured</h1>
+                            Each and every seafood product marketed at Frescamer undergoes strict lab tests to ensure the highest quality. Quick freezing helps prevent bacterial growth and retain freshness.
+                                </div>
+                                <div class="card col-sm-3" style="background-color:transparent;"><img src="./static/images/4.png" width="150" height="150"/><h1 id="cursive">100% Healthy</h1>
+                            HACCP regulations are followed while processing the seafood to provide a clean environment and to make sure every product is 100% free of impurities.
+                                </div>
+                            </div>     
+                        </div>
+                </div>
             <h1 id="cursive">About Us</h1>
             <div class="pair">
                 <img src="./static/images/6.jpg" class="img1">
