--- a/recipe/index.html
+++ b/recipe/index.html
@@ -16,7 +16,7 @@
 
     <div class="container">
         <div class="fab">
-            <a href="contact/"><i class="fa fa-phone" aria-hidden="true"></i><p>  Contact Us</p></a>
+            <a href="../contact/"><i class="fa fa-phone" aria-hidden="true"></i><p>  Contact Us</p></a>
         </div>
         <div class="topnav">
             <div>
