--- a/product/index.html
+++ b/product/index.html
@@ -60,7 +60,7 @@
         </div>
     </div>
     <div id="box">
-        <div class='bannerImage'><img src='../static/images/1.jpg'></div>
+        <div class='bannerImage'><img src='../static/images/1-min.jpg'></div>
         <div class="tbox">
             <h1>PRODUCTS</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
