--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
             <h1 id="cursive">About Us</h1>
             <div class="pair">
-                <img src="./static/images/6.jpg" class="img1">
+                <img src="./static/images/6-min.jpg" class="img1">
                 <p class="text1">We at Frescamer believe that each and every one of you deserve the very best when it comes to flavour, freshness and quality.
                     World class facilities process and preserve the seafood so as to ensure that each of our products are export quality, which is the best quality of food you’ll find in the market.
                     Strict quality control measures are followed including HACCP regulations while processing, and quick freezing to retain freshness.
