minor grid changes

--- a/index.html
+++ b/index.html
@@ -89,16 +89,16 @@
                 <div class="bootstrap-iso pair">
                         <div class="row ">
                             <div class="card-deck">
-                                <div class="card col-sm-3" style="background-color:transparent;"><img src="./static/images/1.png" width="150" height="150"/><h1 id="cursive">Stay Clean, Stay Green</h1>
+                                <div class="card col-sm-3" style="background-color:transparent; margin-bottom: 30px;"><img src="./static/images/1.png" width="150" height="150"/><h1 id="cursive">Stay Clean, Stay Green</h1>
                                 Sustainable and eco-friendly practices are used in order to minimise the impact on the environment.
                                 </div>
-                                <div class="card col-sm-3" style="background-color:transparent;"><img src="./static/images/2.png" width="150" height="150"/><h1 id="cursive">Safe and reliable</h1>
+                                <div class="card col-sm-3" style="background-color:transparent; margin-bottom: 30px;"><img src="./static/images/2.png" width="150" height="150"/><h1 id="cursive">Safe and reliable</h1>
                             The food we bring to your plates is packaged in 100% tried and tested food grade packaging. The food grade plastics used keep the contents fresh and delicious.
                                 </div>
-                                <div class="card col-sm-3" style="background-color:transparent;"><img src="./static/images/3.png" width="150" height="150"/><h1 id="cursive">Quality Assured</h1>
+                                <div class="card col-sm-3" style="background-color:transparent; margin-bottom: 30px;"><img src="./static/images/3.png" width="150" height="150"/><h1 id="cursive">Quality Assured</h1>
                             Each and every seafood product marketed at Frescamer undergoes strict lab tests to ensure the highest quality. Quick freezing helps prevent bacterial growth and retain freshness.
                                 </div>
-                                <div class="card col-sm-3" style="background-color:transparent;"><img src="./static/images/4.png" width="150" height="150"/><h1 id="cursive">100% Healthy</h1>
+                                <div class="card col-sm-3" style="background-color:transparent; margin-bottom: 30px;"><img src="./static/images/4.png" width="150" height="150"/><h1 id="cursive">100% Healthy</h1>
                             HACCP regulations are followed while processing the seafood to provide a clean environment and to make sure every product is 100% free of impurities.
                                 </div>
                             </div>     
@@ -106,7 +106,7 @@
                 </div>
             <h1 id="cursive">About Us</h1>
             <div class="pair">
-                <img src="./static/images/6-min.jpg" class="img1">
+                <img src="./static/images/6-min.jpg" style= "width:350px; height: 250px;" class="img1">
                 <p class="text1">We at Frescamer believe that each and every one of you deserve the very best when it comes to flavour, freshness and quality.
                     World class facilities process and preserve the seafood so as to ensure that each of our products are export quality, which is the best quality of food you’ll find in the market.
                     Strict quality control measures are followed including HACCP regulations while processing, and quick freezing to retain freshness.
