--- a/recipe/index.html
+++ b/recipe/index.html
@@ -52,7 +52,7 @@
             <div class="prod-main">
                 <div class="prodEtail-main">
                     <p id="proName-main"></p>
-                    <p class="price-main">&#8377 <span style="font-size: 30px;" id="rate"></span></p>
+                    <p class="price-main" style="display : none">&#8377 <span style="font-size: 30px;" id="rate"></span></p>
                     <div id="star-main"></div>
                     <p id="disp-main"></p>
                 </div>
