changed the font style

--- a/contact/index.html
+++ b/contact/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../static/assets/global.css">
     <script type="application/javascript" src='../static/js/nav.js'></script>
     <link href="https://fonts.googleapis.com/css?family=Barlow|Montserrat|PT+Sans+Narrow&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Proza+Libre&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
@@ -42,7 +43,7 @@
         <div class="container">
 
             <div class="pair">
-                <div class="contact_info">
+                <div class="contact_info style="    font-family: 'Proza Libre', sans-serif;"">
                     <h2>Contact info</h2><small>For further enquiries or clarifications, please contact.... <br><br>
 </small><a href="tel:+9865327410" style="font-size: 19px;"><i class="fa fa-phone" aria-hidden="true"></i> 9865327410</a><br><br>
                     <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=info@frescamer.com" style="font-size: 19px;"><i class="fa fa-envelope" aria-hidden="true" ></i>info@frescamer.com</a><br><br>
