--- a/contact/index.html
+++ b/contact/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" type="text/css" href="../static/assets/global.css">
     <script type="application/javascript" src='../static/js/nav.js'></script>
     <link href="https://fonts.googleapis.com/css?family=Barlow|Montserrat|PT+Sans+Narrow&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Proza+Libre&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
@@ -46,10 +49,10 @@
                     <h2>Contact info</h2><small>For further enquiries or clarifications, please contact.... <br><br>
 </small><a href="tel:+9865327410" style="font-size: 19px;"><i class="fa fa-phone" aria-hidden="true"></i> 9865327410</a><br><br>
                     <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=info@frescamer.com" style="font-size: 19px;"><i class="fa fa-envelope" aria-hidden="true" ></i>info@frescamer.com</a><br><br>
-                    <a href="https://www.google.com/maps/place/Model+Engineering+College/@10.0283637,76.3263237,17z/data=!3m1!4b1!4m5!3m4!1s0x3b080c5006491601:0xcf23e14245d4694d!8m2!3d10.0283637!4d76.3285124" style="font-size: 19px;"style="font-size: 19px;"><i class="fa fa-map-marker" aria-hidden="true" ></i><p>Lorem ipsum dolor;<br>sit amet,<br> consectetur adipiscing</p></a><br><br>
+                    <a href="https://www.google.com/maps/place/Model+Engineering+College/@10.0283637,76.3263237,17z/data=!3m1!4b1!4m5!3m4!1s0x3b080c5006491601:0xcf23e14245d4694d!8m2!3d10.0283637!4d76.3285124" style="font-size: 19px;" style="font-size: 19px;"><i class="fa fa-map-marker" aria-hidden="true" ></i><p>Lorem ipsum dolor;<br>sit amet,<br> consectetur adipiscing</p></a><br><br>
                     <div class="order">
                         <p>Order Now</p>
-                     
+
                     </div>
 
                 </div>
