--- a/recipe/index.html
+++ b/recipe/index.html
@@ -65,8 +65,7 @@
             <div class='bannerImage'><img src='../static/images/1-min.jpg'></div>
             <div class="tbox">
                 <h1>RECIPES</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
+                <p>A wide range of Recipes can be prepared from our Products</p>
             </div>
         </div>
         <div class=footer>
