--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> -->
@@ -39,7 +40,9 @@
 
     <div class="container">
         <div class="fab">
-            <a href="contact/"><i class="fa fa-phone" aria-hidden="true"></i><p class="hidden"></p></a>
+            <a href="contact/"><i class="fa fa-phone" aria-hidden="true"></i>
+                <p class="hidden"></p>
+            </a>
         </div>
         <div class="topnav">
             <div>
@@ -85,7 +88,7 @@
 
 
 
-        <div class="tbox">
+        <div class="tbox" data-aos="fade-up" data-aos-duration="2000">
             <div class="bootstrap-iso pair">
                 <div class="row ">
                     <div class="card-deck">
@@ -108,14 +111,15 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <br><br><br>
+        <div class="tbox" data-aos="fade-up" data-aos-duration="2000">
             <h1 id="cursive">About Us</h1>
             <div class="pair">
-                <img src="./static/images/6-min.jpg" style="width:350px; height: 250px;" class="img1">
+                <img src="./static/images/6-min.jpg" style="width:300px; height: 200px;" class="img1">
                 <p class="text1">We at Frescamer believe that each and every one of you deserve the very best when it comes to flavour, freshness and quality. World class facilities process and preserve the seafood so as to ensure that each of our products are export
                     quality, which is the best quality of food you’ll find in the market. Strict quality control measures are followed including HACCP regulations while processing, and quick freezing to retain freshness.
-
                 </p>
-
             </div>
         </div>
         <div class="footer">
@@ -137,11 +141,15 @@
                     <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br></p>
                 </div>
             </div>
-            Frescamer | Powered by Excel 2019</div>
+            Frescamer | Powered by Excel 2019
+        </div>
 
 
     </div>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
