--- a/gallery/index.html
+++ b/gallery/index.html
@@ -19,7 +19,9 @@
 
     <div class="container">
         <div class="fab">
-            <a href="../contact/"><i class="fa fa-phone" aria-hidden="true"></i><p>  Contact Us</p></a>
+            <a href="../contact/"><i class="fa fa-phone" aria-hidden="true"></i>
+                <p> Contact Us</p>
+            </a>
         </div>
         <div class="topnav">
             <div>
@@ -176,26 +178,19 @@
             </div>
 
         </div>
-        <div class=footer>
+        <div class="footer">
             <div class="pair">
-                <div class="footerLinks">
-                    <h3>LINKS</h3><br>
-                    <a href="../">Home</a><br>
-                    <a href="../product/">Products</a><br>
-                    <a href="../recipe/">Recipes</a><br>
-                    <a href="../contact/">Contact Us</a><br>
-                    <a href="../services/">Services</a><br>
-                    <a href="#">Store Finder</a><br>
-                    <a href="../gallery/">Gallery</a><br><br>
-                </div>
-                <div class="footerDetails">
+                <div class="footerDetails" style="grid-area: box1; text-align:center; margin: 10px auto;">
                     <h3>ADDRESS</h3><br>
                     <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br><br></p>
-                    <h3>CONTACT US</h3><br>
-                    <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br></p>
+                </div>
+                <div class="footerDetails" style="grid-area: box2; text-align:center; margin: 10px auto;">
+                    <h3>CONTACT</h3><br>
+                    <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br><br></p>
                 </div>
             </div>
-            Frescamer | Powered by Excel 2019</div>
+            Frescamer | Powered by Excel 2019
+        </div>
 
 </body>
 
