--- a/index.html
+++ b/index.html
@@ -124,21 +124,13 @@
         </div>
         <div class="footer">
             <div class="pair">
-                <div class="footerLinks">
-                    <h3>LINKS</h3><br>
-                    <a href="#">Home</a><br>
-                    <a href="product/">Products</a><br>
-                    <a href="recipe/">Recipes</a><br>
-                    <a href="contact/">Contact Us</a><br>
-                    <a href="services/">Services</a><br>
-                    <a href="#">Store Finder</a><br>
-                    <a href="gallery/">Gallery</a><br><br>
-                </div>
-                <div class="footerDetails">
+                <div class="footerDetails" style="grid-area: box1; text-align:center; margin: 10px auto;">
                     <h3>ADDRESS</h3><br>
                     <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br><br></p>
-                    <h3>CONTACT US</h3><br>
-                    <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br></p>
+                </div>
+                <div class="footerDetails" style="grid-area: box2; text-align:center; margin: 10px auto;">
+                    <h3>CONTACT</h3><br>
+                    <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br><br></p>
                 </div>
             </div>
             Frescamer | Powered by Excel 2019
