Test background image

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 </head>
 
-<body>
+<body style="background-image: url(./static/9c059efe-0572-4f8e-9432-fae22718b7ed.jpg">
     <!-- <div class="blur-background"></div> -->
 
 
