--- a/gallery/index.html
+++ b/gallery/index.html
@@ -58,17 +58,17 @@
 
             <div class="cardRow">
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/DSCF5274.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/1.jpg')">
                     </div>
 
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/DSCF5276.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/2.jpg')">
                     </div>
 
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/DSCF5281.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/3.jpg')">
                     </div>
 
                 </div>
@@ -76,17 +76,17 @@
 
             <div class="cardRow">
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/DSCF5282.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/4.jpg')">
                     </div>
 
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/DSCF5285.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/5.jpg')">
                     </div>
 
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/DSCF5287.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/6.jpg')">
                     </div>
 
                 </div>
@@ -94,17 +94,17 @@
 
             <div class="cardRow">
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/DSCF5289.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/7.jpg')">
                     </div>
 
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/DSCF5291.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/8.jpg')">
                     </div>
 
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/DSCF5292.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/9.jpg')">
                     </div>
 
                 </div>
@@ -112,17 +112,17 @@
 
             <div class="cardRow">
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/DSCF5293.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/10.jpg')">
                     </div>
 
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/DSCF5294.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/11.jpg')">
                     </div>
 
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/DSCF5297.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/12.jpg')">
                     </div>
 
                 </div>
@@ -130,52 +130,23 @@
 
             <div class="cardRow">
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/DSCF5299.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/13.jpg')">
                     </div>
 
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/DSCF5300.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/14.jpg')">
                     </div>
 
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/DSCF5301.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/15.jpg')">
                     </div>
 
                 </div>
             </div>
 
-            <div class="cardRow">
-                <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/DSCF5304.jpg')">
-                    </div>
 
-                </div>
-                <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/DSCF5305.jpg')">
-                    </div>
-
-                </div>
-                <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/DSCF5306.jpg')">
-                    </div>
-
-                </div>
-            </div>
-
-            <div class="cardRow">
-                <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/DSCF5307.jpg')">
-                    </div>
-
-                </div>
-                <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/DSCF5308.jpg')">
-                    </div>
-
-                </div>
-            </div>
 
         </div>
         <div class="footer">
