--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container">
         <div class="fab">
             <a href="contact/"><i class="fa fa-phone" aria-hidden="true"></i>
-                <p class="hidden"></p>
+                <p >Contact Us</p>
             </a>
         </div>
         <div class="topnav">
@@ -68,7 +68,7 @@
 
         <div id="mySidepanel" class="sidepanel">
             <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
-            <a href="#">Home</a>
+            <a href="">Home</a>
             <a href="product/">Products</a>
             <a href="recipe/">Recipes</a>
             <a href="contact/">Contact Us</a>
