navbg and address added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="topnav">
             <div>
-                <a href="#">
+                <a href="">
                     <img src="static/assets/logo.png" alt="Frescamer" class="logo">
                 </a>
                 <button class="openbtn" onclick="openNav()">☰</button>
@@ -72,7 +72,6 @@
             <a href="product/">Products</a>
             <a href="recipe/">Recipes</a>
             <a href="contact/">Contact Us</a>
-            <a href="#">Store Finder</a>
             <a href="gallery/">Gallery</a>
 
         </div>
@@ -125,11 +124,14 @@
             <div class="pair">
                 <div class="footerDetails" style="grid-area: box1; text-align:center; margin: 10px auto;">
                     <h3>ADDRESS</h3><br>
-                    <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br><br></p>
+                    <p>Rajkamal Palakal,<br>Nettepadam lane,<br>Kochi-682016<br>Kerala, India<br><br><br></p>
                 </div>
                 <div class="footerDetails" style="grid-area: box2; text-align:center; margin: 10px auto;">
                     <h3>CONTACT</h3><br>
-                    <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br><br></p>
+                    <a href="tel:+9865327410" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i class="fa fa-phone"
+                        aria-hidden="true"></i> 9865327410</a><br><br>
+                    <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=info@frescamer.com" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i class="fa fa-envelope"
+                        aria-hidden="true"></i>  info@frescamer.com</a><br><br><br><br><br></p>
                 </div>
             </div>
             Frescamer | Powered by Excel 2019
