--- a/contact/index.html
+++ b/contact/index.html
@@ -23,7 +23,7 @@
     <div class="container">
         <div class="topnav">
             <div>
-                <a href="#">
+                <a href="../">
                     <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
                 </a>
                 <button class="openbtn" onclick="openNav()">☰</button>
@@ -37,8 +37,6 @@
             <a href="../product/">Products</a>
             <a href="../recipe/">Recipes</a>
             <a href="../contact/">Contact Us</a>
-            <a href="../services/">Services</a>
-            <a href="#">Store Finder</a>
             <a href="../gallery/">Gallery</a>
 
         </div>
@@ -53,7 +51,7 @@
                             aria-hidden="true"></i>info@frescamer.com</a><br><br>
                     <a href="https://www.google.com/maps/place/Model+Engineering+College/@10.0283637,76.3263237,17z/data=!3m1!4b1!4m5!3m4!1s0x3b080c5006491601:0xcf23e14245d4694d!8m2!3d10.0283637!4d76.3285124" style="font-size: 19px;" style="font-size: 19px;"><i class="fa fa-map-marker"
                             aria-hidden="true"></i>
-                        <p>Lorem ipsum dolor;<br>sit amet,<br> consectetur adipiscing</p>
+                            <p>Rajkamal Palakal,<br>Nettepadam lane,<br>Kochi-682016<br>Kerala, India<br><br><br></p>
                     </a><br><br>
                     <div class="order">
                         <p>Order Now</p>
@@ -75,11 +73,14 @@
                 <div class="pair">
                     <div class="footerDetails" style="grid-area: box1; text-align:center; margin: 10px auto;">
                         <h3>ADDRESS</h3><br>
-                        <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br><br></p>
+                        <p>Rajkamal Palakal,<br>Nettepadam lane,<br>Kochi-682016<br>Kerala, India<br><br><br></p>
                     </div>
                     <div class="footerDetails" style="grid-area: box2; text-align:center; margin: 10px auto;">
                         <h3>CONTACT</h3><br>
-                        <p>dolore magna aliqua<br>minim veniam<br>consectetur<br><br><br></p>
+                        <a href="tel:+9865327410" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i class="fa fa-phone"
+                            aria-hidden="true"></i> 9865327410</a><br><br>
+                        <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=info@frescamer.com" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i class="fa fa-envelope"
+                            aria-hidden="true"></i>  info@frescamer.com</a><br><br><br><br><br></p>
                     </div>
                 </div>
                 Frescamer | Powered by Excel 2019
