gallery JPG fix

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -54,35 +54,17 @@
 
             <div class="cardRow">
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/1.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/1.JPG')">
                     </div>
 
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/2.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/2.JPG')">
                     </div>
 
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/3.jpg')">
-                    </div>
-
-                </div>
-            </div>
-
-            <div class="cardRow">
-                <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/4.jpg')">
-                    </div>
-
-                </div>
-                <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/5.jpg')">
-                    </div>
-
-                </div>
-                <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/6.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/3.JPG')">
                     </div>
 
                 </div>
@@ -90,35 +72,17 @@
 
             <div class="cardRow">
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/7.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/4.JPG')">
                     </div>
 
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/8.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/5.JPG')">
                     </div>
 
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/9.jpg')">
-                    </div>
-
-                </div>
-            </div>
-
-            <div class="cardRow">
-                <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/10.jpg')">
-                    </div>
-
-                </div>
-                <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/11.jpg')">
-                    </div>
-
-                </div>
-                <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/12.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/6.JPG')">
                     </div>
 
                 </div>
@@ -126,17 +90,53 @@
 
             <div class="cardRow">
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/13.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/7.JPG')">
                     </div>
 
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/14.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/8.JPG')">
                     </div>
 
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/15.jpg')">
+                    <div class="prodImg" style="background-image: url('./images/9.JPG')">
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="cardRow">
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/10.JPG')">
+                    </div>
+
+                </div>
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/11.JPG')">
+                    </div>
+
+                </div>
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/12.JPG')">
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="cardRow">
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/13.JPG')">
+                    </div>
+
+                </div>
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/14.JPG')">
+                    </div>
+
+                </div>
+                <div class="card">
+                    <div class="prodImg" style="background-image: url('./images/15.JPG')">
                     </div>
 
                 </div>
