--- a/gallery/index.html
+++ b/gallery/index.html
@@ -54,17 +54,17 @@
 
             <div class="cardRow">
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/1.JPG')">
+                    <div class="prodImg" style="background-image: url('./images/1.jpg')">
                     </div>
 
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/2.JPG')">
+                    <div class="prodImg" style="background-image: url('./images/2.jpg')">
                     </div>
 
                 </div>
                 <div class="card">
-                    <div class="prodImg" style="background-image: url('./images/3.JPG')">
+                    <div class="prodImg" style="background-image: url('./images/3.jpg')">
                     </div>
 
                 </div>
