--- a/product/index.html
+++ b/product/index.html
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="fab">
             <a href="../contact/"><i class="fa fa-phone" aria-hidden="true"></i>
-                <p> Contact Us</p>
+                <p id="mobi"> Contact Us</p>
             </a>
         </div>
         <div class="topnav">
