--- a/product/index.html
+++ b/product/index.html
@@ -15,7 +15,7 @@
     <title>Products</title>
 </head>
 
-<body>
+<body style= "background-image: url(../static/assets/fresbg2.jpg">
 
     <div class="container">
         <div class="fab">
@@ -61,7 +61,7 @@
         </div>
     </div>
     <div id="box">
-        <div class='bannerImage'><img src='../static/images/1-min.jpg'></div>
+        <div class='bannerImage'><img src='../static/images/s5.jpg' ></div>
         <div class="tbox">
             <h1>PRODUCTS</h1>
             <p>We offer a wide range of Products</p>
