--- a/contact/index.html
+++ b/contact/index.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body>
+<body style="background-image: url(../static/assets/fresbg2.jpg">
     <div class="container">
         <div class="topnav">
             <div>
