--- a/gallery/index.html
+++ b/gallery/index.html
@@ -15,7 +15,7 @@
     <title>Gallery</title>
 </head>
 
-<body>
+<body style="background-image: url(../static/assets/fresbg2.jpg">
 
     <div class="container">
         <div class="fab">
