--- a/recipe/index.html
+++ b/recipe/index.html
@@ -15,7 +15,7 @@
     <title>Recipes</title>
 </head>
 
-<body>
+<body style= "background-image: url(../static/assets/fresbg2.jpg">
 
     <div class="container">
         <div class="fab">
