--- a/index.html
+++ b/index.html
@@ -111,15 +111,6 @@
             </div>
         </div>
         <br><br><br>
-        <div class="tbox" data-aos="fade-up" data-aos-duration="2000">
-            <h1 id="cursive">About Us</h1>
-            <div class="pair">
-               <!-- <img src="./static/images/ab.jpg" class="img1"> -->
-                <p class="text1">We at Frescamer believe that each and every one of you deserve the very best when it comes to flavour, freshness and quality. World class facilities process and preserve the seafood so as to ensure that each of our products are export
-                    quality, which is the best quality of food you’ll find in the market. Strict quality control measures are followed including HACCP regulations while processing, and quick freezing to retain freshness.
-                </p>
-            </div>
-        </div>
         <div class="footer">
             <div class="pair">
                 <div class="footerDetails" style="grid-area: box1; text-align:center; margin: 10px auto;">
@@ -131,7 +122,7 @@
                     <a href="tel:+9865327410" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i class="fa fa-phone"
                         aria-hidden="true"></i> 9865327410</a><br><br>
                     <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=info@frescamer.com" style="text-decoration: none;color: white; font-family: inherit; font-size: 19px;"><i class="fa fa-envelope"
-                        aria-hidden="true"></i>  info@frescamer.com</a><br><br><br><br><br></p>
+                        aria-hidden="true"></i>  info@frescamer.com</a><br><br><br></p>
                 </div>
             </div>
             Frescamer | Powered by Excel 2019
