--- a/abt-us/index.html
+++ b/abt-us/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css" integrity="sha256-a2tobsqlbgLsWs7ZVUGgP5IvWZsx8bTNQpzsqCSm5mk=" crossorigin="anonymous" />
 
     <link rel="stylesheet" type="text/css" href="../static/assets/global.css">
-    <link rel="stylesheet" type="text/css" href="./style/services.css">
+    <link rel="stylesheet" type="text/css" href="./style/abt.css">
     <script type="application/javascript" src='../static/js/nav.js'></script>
   
 </head>
